# 3OX.Ai

./: PLAN.md  README.md
.3ox/: 3ox.clip
.3ox/(1)Spark/: sparkfile.md
.3ox/(2)Brains/: brains.rs
.3ox/(3)Rules/: limits.toml
.3ox/(4)Toolkit/: tools.yml
.3ox/(5)Links/: routes.json
.3ox/(6)Pulse/: run.rb
.3ox/_meta/: CHANGELOG.toml  NAMING.CONTRACT.toml  SESSION.CHECKPOINT.toml  WHOAMI.md
1n3ox-temp/: 0UT.3OX_README.md  index.html  sync-3ox-store.sh
3OX Agents/VSO Agent/: README.md
3OX Agents/VSO Agent/.3ox/: brain.rs  sparkfile.md
3OX.BUILDER/: DEPLOY.md  GITHUB_SETUP.md  INSTALL.md  INSTALL_CLI.md  README.md  START_HERE.md  compile-run.bun
3OX.BUILDER/3OX.BUILD/RAW.3ox/: brain.rs
3OX.BUILDER/3OX.BUILD/TEMPLATES/: brains.rs  sparkfile.md
3OX.BUILDER/3ox-cli/src/: main.rs
3OX.BUILDER/boot/: build.rs
3OX.BUILDER/boot/src/: main.rs.backup
3OX.BUILDER/vec3.core/src/: lib.rs  vec3.rs
3ox-cli/: Dockerfile.agents  README.md  docker-compose.yml  package-lock.json  package.json
3ox-cli/3OX.SETS/FINANCE.3ox/: Cargo.toml  brain.rs  limits.json  routes.json  run.rb  tools.yml
3ox-cli/backend-rust/: Cargo.toml  Dockerfile
3ox-cli/backend-rust/src/: executor.rs  lib.rs  main.rs  models.rs  scanner.rs
3ox-cli/src/: index.html  main.js  styles.css
3ox-cli/src-tauri/: Cargo.toml  tauri.conf.json
3ox-cli/src-tauri/src/: main.rs
Money.Bagz/.3ox/: sync-vps.sh
_TRON/: _TRON.CONTRACT.toml
_TRON/systemd/: speaker-mesh.service  teleprompter.service
_meta/: CHANGELOG.toml  NAMING.CONTRACT.toml  SESSION.CHECKPOINT.toml  WHOAMI.md
(+11 files in other folders)
